--- a/ideaForge/Dashboard.xaml
+++ b/ideaForge/Dashboard.xaml
@@ -332,6 +332,15 @@
                             HorizontalAlignment="Right"
                             Orientation="Horizontal"
                             >
+                            <Button Margin="10,0,0,0" x:Name="btnExcel" BorderThickness="0" BorderBrush="Transparent" Click="btnExcel_Click"  Height="40" Background="White">
+                                <Button.Content>
+                                    <Image 
+                          
+                             
+                            Source="/Images/iconExcel.png"/>
+                                </Button.Content>
+                            </Button>
+                            
                             <Image 
                           Margin="0,10"
                                 Height="18"
