--- a/ideaForge/Pages/LoginPages/Signup.xaml
+++ b/ideaForge/Pages/LoginPages/Signup.xaml
@@ -11,13 +11,13 @@
              xmlns:dotNetKitControls="clr-namespace:DotNetKit.Windows.Controls;assembly=DotNetKit.Wpf.AutoCompleteComboBox"
       xmlns:vm="clr-namespace:ideaForge.ViewModels"
         mc:Ignorable="d"
-        SizeChanged="UserControl_SizeChanged"
+        SizeChanged="UserControl_SizeChanged" 
      
        >
     <UserControl.Resources>
-  
+
         <Style TargetType="{x:Type TextBox}">
-          
+
             <Style.Setters>
                 <Setter Property="Template">
                     <Setter.Value>
@@ -53,7 +53,7 @@
                                     </StackPanel>
                                 </Border>
                                 <TextBlock Text="{Binding AdornedElement.ToolTip    
-                        , ElementName=errorControl}" Foreground="Red" />
+                        , ElementName=errorControl}" Foreground="Red" FontSize="9" />
                             </StackPanel>
                         </ControlTemplate>
                     </Setter.Value>
@@ -103,7 +103,7 @@
         </Style>
         <Style TargetType="{x:Type dotNetKitControls:AutoCompleteComboBox}">
             <Style.Setters>
-               
+
                 <Setter Property="BorderThickness" Value="0"/>
                 <Setter Property="Height" Value="40"/>
                 <Setter Property="BorderBrush" Value="Transparent"/>
@@ -112,11 +112,11 @@
                 <Setter Property="VerticalContentAlignment" Value="Center"/>
                 <Setter Property="Padding" Value="5,0,0,0"/>
             </Style.Setters>
-           
+
         </Style>
     </UserControl.Resources>
     <ScrollViewer>
-        <Grid x:Name="loginControl" Margin="40,0" HorizontalAlignment="Stretch" VerticalAlignment="Center">
+        <Grid x:Name="loginControl" HorizontalAlignment="Stretch" VerticalAlignment="Center">
             <Grid.RowDefinitions>
                 <RowDefinition  Height="auto"/>
                 <RowDefinition  Height="*"/>
@@ -129,13 +129,37 @@
                 <RowDefinition  Height="40" />
                 <RowDefinition  Height="*"/>
             </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
             <!--<StackPanel Orientation="Horizontal">
                 <Button Background="Transparent" BorderThickness="0" Command="{Binding Path=SignupBackButtonCommand}" >
                     <Image Source="/Images/backArrow.png"/>
                 </Button>
                 <Label Content="Signup" Margin="146,0,146,0" FontSize="34" FontFamily="Segoe UI" FontWeight="SemiBold"/>
             </StackPanel>-->
-            <StackPanel Grid.Row="1" Orientation="Vertical">
+            <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Orientation="Vertical">
+                <Label Content="Sign up" Margin="10,0,0,15" Foreground="Black"  FontWeight="SemiBold" FontSize="28"/>
+                <StackPanel Orientation="Horizontal" Margin="15,0,0,15">
+                    <RadioButton IsChecked="{Binding PilotCheck}" Margin="0,9,0,0" Background="Transparent">
+                        <RadioButton.Resources>
+                            <Style TargetType="RadioButton">
+
+                            </Style>
+                        </RadioButton.Resources>
+                    </RadioButton>
+                    <Label Content="Pilot Login" VerticalContentAlignment="Center" Foreground="Black"  FontWeight="SemiBold" FontSize="16"/>
+                    <RadioButton IsChecked="{Binding adminCheck}" Margin="50,9,0,0"  HorizontalAlignment="Right" Background="Transparent">
+                        <RadioButton.Resources>
+                            <Style TargetType="RadioButton">
+
+                            </Style>
+                        </RadioButton.Resources>
+                    </RadioButton>
+                    <Label Content="Admin Login" VerticalContentAlignment="Center" Foreground="Black"  FontWeight="SemiBold" FontSize="16"/>
+                </StackPanel>
+
                 <Label HorizontalAlignment="Left" Margin="15,0,0,0" FontSize="20" FontFamily="Segoe UI" FontWeight="SemiBold">
                     <Label.Template>
                         <ControlTemplate>
@@ -155,12 +179,13 @@
                     }" x:Name="txtName"  
                          PreviewTextInput="txtName_PreviewTextInput"
                          PreviewKeyDown="NoSpace_PreviewKeyDown1">
-                   
+
                 </TextBox>
                 <!--<Label Margin="15,0,0,0" x:Name="lblName" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>-->
             </StackPanel>
-            <StackPanel Grid.Row="2" Orientation="Vertical">
-                <Label HorizontalAlignment="Left" Margin="15,0,0,0" FontSize="20" FontFamily="Segoe UI" FontWeight="SemiBold">
+
+            <StackPanel Grid.Row="2"  Orientation="Vertical">
+                <Label HorizontalAlignment="Left" Margin="15,0,0,5" FontSize="20" FontFamily="Segoe UI" FontWeight="SemiBold">
                     <Label.Template>
                         <ControlTemplate>
                             <TextBlock>
@@ -172,29 +197,28 @@
                 </Label>
                 <Border BorderBrush="#A9ABB1" Margin="15,0,15,15" BorderThickness="1" CornerRadius="5">
                     <Grid>
-                        <dotNetKitControls:AutoCompleteComboBox
-    SelectedValuePath="Name"
-                        DisplayMemberPath="Name"
-    TextSearch.TextPath="Name"
-    ItemsSource="{Binding Languages}"
-     SelectedValue="{Binding Language.Name}"  
-                          SelectedItem="{Binding SelectedLanguage}"
-                  TextBoxBase.TextChanged="LanguageComboBox_TextChanged" 
-                x:Name="languageCombobox"
-                
-    />
-                        <TextBlock
-                            Margin="8 10"
-                            Foreground="#A9ABB1"
-      x:Name="languageWaterMark"
-       IsHitTestVisible="False"
-       Text="Select Language" />
+                        <dotNetKitControls:AutoCompleteComboBox Height="35"
+                                SelectedValuePath="Name"
+                                DisplayMemberPath="Name"
+                                TextSearch.TextPath="Name"
+                                ItemsSource="{Binding Languages}"
+                                SelectedValue="{Binding Language.Name}"  
+                                SelectedItem="{Binding SelectedLanguage}"
+                                TextBoxBase.TextChanged="LanguageComboBox_TextChanged" 
+                                x:Name="languageCombobox"/>
+                        <TextBlock Margin="8 10"
+                                       Foreground="#A9ABB1"
+                                       x:Name="languageWaterMark"
+                                       IsHitTestVisible="False"
+                                       Text="Select Language" />
                     </Grid>
-           
+
                 </Border>
                 <!--<ComboBox   />-->
             </StackPanel>
-            <StackPanel Grid.Row="3" Orientation="Vertical">
+
+
+            <StackPanel Grid.Row="2" Grid.Column="1"  Orientation="Vertical">
                 <Label HorizontalAlignment="Left" Margin="15,0,0,0" FontSize="20" FontFamily="Segoe UI" FontWeight="SemiBold">
                     <Label.Template>
                         <ControlTemplate>
@@ -218,9 +242,9 @@
                         <behavior:EmailEntryBehaviors />
                     </e:Interaction.Behaviors>-->
                 </TextBox>
-                <Label Margin="15,0,0,0" Padding="0"  Content="Please Enter a Valid Email" Foreground="Red" Visibility="Hidden"/>
+                <Label Margin="15,0,0,0" Padding="0" Height="0"  Content="Please Enter a Valid Email" Foreground="Red" Visibility="Hidden"/>
             </StackPanel>
-            <StackPanel Grid.Row="4" Orientation="Vertical">
+            <StackPanel Grid.Row="3" Grid.Column="0"  Orientation="Vertical">
                 <Label HorizontalAlignment="Left" Margin="15,0,0,0" FontSize="20" FontFamily="Segoe UI" FontWeight="SemiBold">
                     <Label.Template>
                         <ControlTemplate>
@@ -248,7 +272,7 @@
                 </TextBox>
                 <!--<Label Margin="15,0,0,0" Padding="0"  Content="Please Enter a Valid Contact Number" Foreground="Red"  Visibility="Hidden"/>-->
             </StackPanel>
-            <StackPanel Grid.Row="5" Orientation="Vertical">
+            <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Vertical">
                 <Label HorizontalAlignment="Left" Margin="15,0,0,0" FontSize="20" FontFamily="Segoe UI" FontWeight="SemiBold">
                     <Label.Template>
                         <ControlTemplate>
@@ -270,7 +294,7 @@
                     PreviewKeyDown="NoSpace_PreviewKeyDown2"/>
                 <!--<Label Margin="15,0,0,0" Padding="0" x:Name="lblOrganization"  Content="Please Enter a Valid Organization Name" Foreground="Red" Visibility="Hidden"/>-->
             </StackPanel>
-            <StackPanel Grid.Row="6" Orientation="Vertical">
+            <StackPanel Grid.Row="4" Grid.Column="0" Orientation="Vertical">
                 <Label HorizontalAlignment="Left" Margin="15,0,0,0" FontSize="20" FontFamily="Segoe UI" FontWeight="SemiBold">
                     <Label.Template>
                         <ControlTemplate>
@@ -288,8 +312,8 @@
                     PreviewKeyDown="NoSpace_PreviewKeyDown3"
                     x:Name="DepartmentNameTxt"/>
             </StackPanel>
-            <StackPanel  Grid.Row="7" Orientation="Vertical">
-                <Label HorizontalAlignment="Left" Margin="15,0,0,0" FontSize="20" FontFamily="Segoe UI" FontWeight="SemiBold">
+            <StackPanel  Grid.Row="4" Grid.Column="1" Orientation="Vertical">
+                <Label HorizontalAlignment="Left" Margin="15,0,0,5" FontSize="20" FontFamily="Segoe UI" FontWeight="SemiBold">
                     <Label.Template>
                         <ControlTemplate>
                             <TextBlock>
@@ -299,12 +323,12 @@
                         </ControlTemplate>
                     </Label.Template>
                 </Label>
-                
+
                 <Border BorderBrush="#A9ABB1" Margin="15,0,15,15" BorderThickness="1" CornerRadius="5">
                     <Grid>
-                     
 
-                            <dotNetKitControls:AutoCompleteComboBox
+
+                        <dotNetKitControls:AutoCompleteComboBox Height="35"
     SelectedValuePath="city_Name"
                         DisplayMemberPath="city_Name"
     TextSearch.TextPath="city_Name"
@@ -317,23 +341,23 @@
                         x:Name="cityComboBox"
                          TextBoxBase.TextChanged="CityComboBox_TextChanged"
    />
-                            <TextBlock
+                        <TextBlock
                             Margin="8 10"
                             Foreground="#A9ABB1"
       x:Name="cityWaterMark"
        IsHitTestVisible="False"
        Text="Select City" />
-                       
-                    
-                       
+
+
+
                     </Grid>
-                   
+
                 </Border>
-             
+
 
             </StackPanel>
             <Button 
-            Grid.Row="8"
+            Grid.Row="8" Grid.ColumnSpan="2"
                 
             x:Name="Send" 
             BorderThickness="1" Margin="10,0,10,0"
@@ -359,7 +383,7 @@
                     </Style>
                 </Button.Resources>
             </Button>
-            <StackPanel Grid.Row="9" 
+            <StackPanel Grid.Row="9" Grid.ColumnSpan="2"
                 
                     Orientation="Horizontal" 
                     HorizontalAlignment="Center">
@@ -372,12 +396,12 @@
                      Content="Sign In"  
                    
                      Command="{Binding SignupBackButtonCommand}">
-                   
+
 
 
                 </Button>
             </StackPanel>
         </Grid>
     </ScrollViewer>
-   
+
 </UserControl>
