--- a/ideaForge/Pages/DashboardPages/UserManagementPage.xaml
+++ b/ideaForge/Pages/DashboardPages/UserManagementPage.xaml
@@ -46,13 +46,29 @@
                 <DataGridTemplateColumn  Header="Pilot Name" Width="*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <StackPanel Orientation="Vertical" >
+                            <StackPanel Orientation="Horizontal" >
                                 <Label Content="{Binding userName}" FontWeight="SemiBold">
                                 </Label>
-                                <Label Content="{Binding contactNo}">
+                                <Button Content="Active" Command="{Binding }"  Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
+                                    <Button.Resources >
+                                        <Style TargetType="{x:Type Button} ">
+
+                                            <Style.Resources>
+                                                <Style TargetType="{x:Type Border}">
+                                                    <Setter Property="CornerRadius" Value="10" />
 
 
-                                </Label>
+                                                    <Style.Triggers>
+                                                        <Trigger Property="IsMouseOver" Value="True">
+                                                            <Setter Property="Background" Value="#5D9115"/>
+                                                        </Trigger>
+                                                    </Style.Triggers>
+                                                </Style>
+
+                                            </Style.Resources>
+                                        </Style>
+                                    </Button.Resources>
+                                </Button>
                             </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
@@ -60,26 +76,57 @@
                 <DataGridTemplateColumn CanUserSort="True" Header="Flights requested" Width="*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Label Content="{Binding location}"/>
+                            <StackPanel Orientation="Horizontal">
+                            <Label Content="{Binding TotalAcceptedRidesByUser}"/>
+                                <Button Content="View" Command="{Binding }"   Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
+                                    <Button.Resources >
+                                        <Style TargetType="{x:Type Button} ">
+
+                                            <Style.Resources>
+                                                <Style TargetType="{x:Type Border}">
+                                                    <Setter Property="CornerRadius" Value="10" />
+
+
+                                                    <Style.Triggers>
+                                                        <Trigger Property="IsMouseOver" Value="True">
+                                                            <Setter Property="Background" Value="#5D9115"/>
+                                                        </Trigger>
+                                                    </Style.Triggers>
+                                                </Style>
+
+                                            </Style.Resources>
+                                        </Style>
+                                    </Button.Resources>
+                                </Button>
+                            </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn CanUserSort="True" Header="Flights rejected" Width="*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <StackPanel Orientation="Vertical">
-                                <Label FontWeight="SemiBold" Content="{Binding  startDate,StringFormat={}{0:dd/MM/yyyy}}">
+                            <StackPanel Orientation="Horizontal">
+                                <Label Content="{Binding TotalRejectedRidesByUser}"/>
+                                <Button Content="View" Command="{Binding }"  Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
+                                    <Button.Resources >
+                                        <Style TargetType="{x:Type Button} ">
 
-                                </Label>
-                                <Label>
-                                    <Label.Content>
-                                        <TextBlock>
-                                                        <Run Text="{Binding  startDate,StringFormat='{}{0:hh:mm:ss tt}'}"/>
-                                             <Run Text=" - "/>
-                                             <Run Text="{Binding  endDate,StringFormat='{}{0:hh:mm:ss tt}'}"/>
-                                        </TextBlock>
-                                    </Label.Content>
-                                </Label>
+                                            <Style.Resources>
+                                                <Style TargetType="{x:Type Border}">
+                                                    <Setter Property="CornerRadius" Value="10" />
+
+
+                                                    <Style.Triggers>
+                                                        <Trigger Property="IsMouseOver" Value="True">
+                                                            <Setter Property="Background" Value="#5D9115"/>
+                                                        </Trigger>
+                                                    </Style.Triggers>
+                                                </Style>
+
+                                            </Style.Resources>
+                                        </Style>
+                                    </Button.Resources>
+                                </Button>
                             </StackPanel>
 
                         </DataTemplate>
@@ -89,28 +136,29 @@
 
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Border CornerRadius="4" Opacity="1"
-                                                BorderThickness="1"
-                                                Background="{Binding color}" Padding="5,1"
-                                                Height="30"
-                                                Width="90">
-                                <Grid >
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="1*"/>
-                                        <ColumnDefinition Width="3*"/>
-                                    </Grid.ColumnDefinitions>
+                            <StackPanel Orientation="Horizontal">
+                                <Label Content="{Binding TotalAcceptedRidesByUser}"/>
+                                <Button Content="View" Command="{Binding }"  Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
+                                    <Button.Resources >
+                                        <Style TargetType="{x:Type Button} ">
+                                            
+                                            <Style.Resources>
+                                                <Style TargetType="{x:Type Border}">
+                                                    <Setter Property="CornerRadius" Value="10" />
+                                                   
+                                                    
+                                                    <Style.Triggers>
+                                                        <Trigger Property="IsMouseOver" Value="True">
+                                                            <Setter Property="Background" Value="#5D9115"/>
+                                                        </Trigger>
+                                                    </Style.Triggers>
+                                                </Style>
 
-                                    <Image Source="{Binding StatusImage}" 
-                                                       Grid.Column="0" Height="10" Margin="5,0"/>
-                                    <Label Content="{Binding status}" 
-                                                       Foreground="{Binding TextColor}" 
-                                                       Margin="0,0"
-                                                       FontSize="10"
-                                                       Grid.Column="1"/>
-
-                                </Grid>
-
-                            </Border>
+                                            </Style.Resources>
+                                        </Style>
+                                    </Button.Resources>
+                                </Button>
+                            </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
 
@@ -118,23 +166,27 @@
                 <DataGridTemplateColumn CanUserSort="False" Header="Flights Serviced" Width="*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <StackPanel Orientation="Horizontal"  >
-                                <Button
-                                                Margin="5,0"
-                                                Width="32"
-                                                BorderBrush="#E9E9E9" 
-                                                    Visibility="{Binding ViewButtonVisible, FallbackValue=Hidden}"
-                                                    BorderThickness="1"
-                                                    Background="White"
-                                                    Command="{Binding 
-                                                RelativeSource={RelativeSource 
-                                                AncestorType={x:Type UserControl}}, 
-                                                Path=DataContext.ViewCommand}"
-                                                    CommandParameter="{Binding .}">
-                                    <StackPanel Orientation="Horizontal">
-                                        <Image Height="8" Source="/Images/viewButtonIcon.png" />
-                                        <!--<TextBlock Margin="5,0">View</TextBlock>-->
-                                    </StackPanel>
+                            <StackPanel Orientation="Horizontal" >
+                                <Label Content="{Binding TotalServiceByUser}"/>
+                                <Button Content="View" Command="{Binding }"   Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
+                                    <Button.Resources >
+                                        <Style TargetType="{x:Type Button} ">
+                                            
+                                            <Style.Resources>
+                                                <Style TargetType="{x:Type Border}">
+                                                    <Setter Property="CornerRadius" Value="10" />
+                                                   
+                                                    
+                                                    <Style.Triggers>
+                                                        <Trigger Property="IsMouseOver" Value="True">
+                                                            <Setter Property="Background" Value="#5D9115"/>
+                                                        </Trigger>
+                                                    </Style.Triggers>
+                                                </Style>
+
+                                            </Style.Resources>
+                                        </Style>
+                                    </Button.Resources>
                                 </Button>
                             </StackPanel>
                         </DataTemplate>
