UserManagement Next Page Done

--- a/ideaForge/Pages/DashboardPages/UserManagementPage.xaml
+++ b/ideaForge/Pages/DashboardPages/UserManagementPage.xaml
@@ -51,7 +51,7 @@
                                 </Label>
                                 <Button Content="Active" Command="{Binding }"  Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
                                     <Button.Resources >
-                                        <Style TargetType="{x:Type Button} ">
+                                        <Style TargetType="{x:Type Button}">
 
                                             <Style.Resources>
                                                 <Style TargetType="{x:Type Border}">
@@ -78,9 +78,15 @@
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
                             <Label Content="{Binding TotalAcceptedRidesByUser}"/>
-                                <Button Content="View" Command="{Binding }"   Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
+                                <Button Content="View" 
+                                        Command="{Binding 
+                                        RelativeSource={RelativeSource 
+                                        AncestorType={x:Type UserControl}}, 
+                                        Path=DataContext.ViewCommand}"
+                                        CommandParameter="{Binding .}"   
+                                        Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
                                     <Button.Resources >
-                                        <Style TargetType="{x:Type Button} ">
+                                        <Style TargetType="{x:Type Button}">
 
                                             <Style.Resources>
                                                 <Style TargetType="{x:Type Border}">
@@ -107,9 +113,9 @@
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="{Binding TotalRejectedRidesByUser}"/>
-                                <Button Content="View" Command="{Binding }"  Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
+                                <Button Content="View" Command="{Binding UserManagementDetailCommand}"  Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
                                     <Button.Resources >
-                                        <Style TargetType="{x:Type Button} ">
+                                        <Style TargetType="{x:Type Button}">
 
                                             <Style.Resources>
                                                 <Style TargetType="{x:Type Border}">
@@ -138,9 +144,9 @@
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="{Binding TotalAcceptedRidesByUser}"/>
-                                <Button Content="View" Command="{Binding }"  Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
+                                <Button Content="View" Command="{Binding UserManagementDetailCommand}"  Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
                                     <Button.Resources >
-                                        <Style TargetType="{x:Type Button} ">
+                                        <Style TargetType="{x:Type Button}">
                                             
                                             <Style.Resources>
                                                 <Style TargetType="{x:Type Border}">
@@ -168,9 +174,9 @@
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal" >
                                 <Label Content="{Binding TotalServiceByUser}"/>
-                                <Button Content="View" Command="{Binding }"   Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
+                                <Button Content="View" Command="{Binding UserManagementDetailCommand}"   Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
                                     <Button.Resources >
-                                        <Style TargetType="{x:Type Button} ">
+                                        <Style TargetType="{x:Type Button}">
                                             
                                             <Style.Resources>
                                                 <Style TargetType="{x:Type Border}">
