one errror in selection city

--- a/ideaForge/Dashboard.xaml
+++ b/ideaForge/Dashboard.xaml
@@ -378,8 +378,8 @@
                                 TextSearch.TextPath="city_Name"
                                 ItemsSource="{Binding CityList}"
                                 SelectedItem="{Binding SelectedCity,Mode=TwoWay}"
-                                SelectedValue="{Binding SelectedLocationId}"  
-                                SelectionChanged="AutoCompleteComboBox_SelectionChanged"
+                                SelectedValue="{Binding SelectedLocationId}"
+                                SelectionChanged="{Binding SelectionChangeCityCombo}"
                                 x:Name="cityComboBox"
                                 TextBoxBase.TextChanged="CityComboBox_TextChanged"/>
                                 <TextBlock Margin="5"
