ComboBox Search on UserManagementPage Done

--- a/ideaForge/Dashboard.xaml
+++ b/ideaForge/Dashboard.xaml
@@ -378,8 +378,7 @@
                                 TextSearch.TextPath="city_Name"
                                 ItemsSource="{Binding CityList}"
                                 SelectedItem="{Binding SelectedCity,Mode=TwoWay}"
-                                SelectedValue="{Binding SelectedLocationId}"
-                               
+                                SelectionChanged="cityComboBox_SelectionChanged"
                                 x:Name="cityComboBox"
                                 TextBoxBase.TextChanged="CityComboBox_TextChanged"/>
                                 <TextBlock Margin="5"
