user management detail page completed

--- a/ideaForge/Pages/DashboardPages/UserManagementPage.xaml
+++ b/ideaForge/Pages/DashboardPages/UserManagementPage.xaml
@@ -114,7 +114,11 @@
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="{Binding TotalRejectedRidesByUser}"/>
-                                <Button Content="View" Command="{Binding UserManagementDetailCommand}"  Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
+                                <Button Content="View"   Command="{Binding 
+                                        RelativeSource={RelativeSource 
+                                        AncestorType={x:Type UserControl}}, 
+                                        Path=DataContext.ViewCommand}"
+                                        CommandParameter="4" Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
                                     <Button.Resources >
                                         <Style TargetType="{x:Type Button}">
 
@@ -145,7 +149,11 @@
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="{Binding TotalAcceptedRidesByUser}"/>
-                                <Button Content="View" Command="{Binding UserManagementDetailCommand}"  Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
+                                <Button Content="View"   Command="{Binding 
+                                        RelativeSource={RelativeSource 
+                                        AncestorType={x:Type UserControl}}, 
+                                        Path=DataContext.ViewCommand}"
+                                        CommandParameter="2" Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
                                     <Button.Resources >
                                         <Style TargetType="{x:Type Button}">
                                             
@@ -175,7 +183,11 @@
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal" >
                                 <Label Content="{Binding TotalServiceByUser}"/>
-                                <Button Content="View" Command="{Binding UserManagementDetailCommand}"   Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
+                                <Button Content="View"   Command="{Binding 
+                                        RelativeSource={RelativeSource 
+                                        AncestorType={x:Type UserControl}}, 
+                                        Path=DataContext.ViewCommand}"
+                                        CommandParameter="5" Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
                                     <Button.Resources >
                                         <Style TargetType="{x:Type Button}">
                                             
